{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 47,
  "lineage": "26b84c02-aa41-072f-502f-72e45db8c12c",
  "resources": [
    {
      "module": "module.networking[\"dev\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "860601e1-ebfb-4368-baf5-5a5d367a51f5",
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastus",
            "name": "dev-vnet",
            "resource_group_name": "module-dev-rg",
            "tags": {
              "environment": "dev",
              "owner": "devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"prod\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bccc5587-cf83-4059-904f-199c76925e49",
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet",
            "location": "westus",
            "name": "prod-vnet",
            "resource_group_name": "module-prod-rg",
            "tags": {
              "environment": "prod",
              "owner": "platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking[\"uat\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8fb1b953-72b3-4427-a187-fbc7f6f19cb9",
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet",
            "location": "westus",
            "name": "uat-vnet",
            "resource_group_name": "module-uat-rg",
            "tags": {
              "environment": "uat",
              "owner": "devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"dev\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "eastus",
            "name": "dev-nsg",
            "resource_group_name": "module-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-RDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"prod\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-nsg",
            "location": "westus",
            "name": "prod-nsg",
            "resource_group_name": "module-prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-RDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "prod",
              "owner": "platform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"uat\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/networkSecurityGroups/uat-nsg",
            "location": "westus",
            "name": "uat-nsg",
            "resource_group_name": "module-uat-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-RDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "uat",
              "owner": "devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"dev-app\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/app",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"dev-db\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/db",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"dev-web\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/web",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"prod-app\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/app",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"prod-db\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/db",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"prod-web\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/web",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"uat-app\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/app",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/networkSecurityGroups/uat-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"uat-db\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/db",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/networkSecurityGroups/uat-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association[\"uat-web\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/web",
            "network_security_group_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/networkSecurityGroups/uat-nsg",
            "subnet_id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_groups.azurerm_resource_group.this",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"dev-app\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"dev-db\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/db",
            "name": "db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"dev-web\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/web",
            "name": "web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"prod-app\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-prod-rg",
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"prod-db\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/db",
            "name": "db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-prod-rg",
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"prod-web\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/web",
            "name": "web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-prod-rg",
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"uat-app\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-uat-rg",
            "virtual_network_name": "uat-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"uat-db\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/db",
            "name": "db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-uat-rg",
            "virtual_network_name": "uat-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"uat-web\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/de07080a-e55f-4426-853d-de09e6de66a8/resourceGroups/module-uat-rg/providers/Microsoft.Network/virtualNetworks/uat-vnet/subnets/web",
            "name": "web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "module-uat-rg",
            "virtual_network_name": "uat-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.this",
            "module.resource_groups.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}